--- a/search/search-cate.html
+++ b/search/search-cate.html
@@ -8,6 +8,7 @@
     <title>Patron_tv</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="stylesheet" href="./css/search.css">
 
     <!-- 설정 js -->
     <script src="./js/config.js"></script>
@@ -17,7 +18,7 @@
 
     <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://svcapi.gigagenie.ai/sdk/v1.0/js/gigagenie.js"></script>
-    <script src="./js/prefixfree.min.js" type="text/javascript"></script>
+    <script src="./js/prefixed.min.js" type="text/javascript"></script>
 
 <!--    <script>-->
 <!--        // <![CDATA[--> ./../../
@@ -53,10 +54,11 @@
         i{font-style:normal;}
         li {list-style: none;}
         ul {padding-left: 0; margin: 0;}
+        a { text-decoration: none;}
         /*common.css*/
         .menu{width:104px; height:100vh; position:fixed; left:0; top:0; padding: 115px 0 0 32px; box-sizing: border-box; background-color: #1d1d1d;}
-        article{position:absolute; left:0; top:0; width: 100%; height: 100vh; z-index: -1; background-color: cornflowerblue;}
-        .contents{width:auto; height:100vh;background-color:mediumpurple; position: absolute; left:104px; padding: 88px 0 0 56px;}
+        article{position:absolute; left:0; top:0; width: 100%; height: 100vh; z-index: -1; background-color: #1d1d1d;}
+        .contents{width:auto; background-color: #1d1d1d; position: absolute; left:104px; padding: 88px 0 0 56px;}
         .lnb { margin-bottom: 400px; box-sizing: border-box; height: 160px;}
         .lnb li {margin-bottom: 24px;}
         .lnb li:last-of-type{margin-bottom: 0;}
@@ -72,10 +74,12 @@
             background-size: cover;}
         .icon-exit{background-image:url("img/icon_exit.png"); width: 40px; height: 40px;    display: block;
             background-size: cover;}
-
-        /*search css*/
-        .search-box {display: none;}
-
+        .item{
+            width: 400px;
+            height: 255px;
+            display: block;
+            border-radius: 6px;
+        }
 
     </style>
 
@@ -118,8 +122,10 @@
             </ul>
         </div>
     </header>
+
     <article>
         <div class="contents">
+
             <div class="search-area">
                 <a href="" class="search-guide">
                     확인키를 눌러 정보를 검색해보세요
@@ -127,16 +133,31 @@
                 <input type="text" class="search-box" placeholder="어떤 예술을 찾으시나요?">
             </div>
 
-
             <div class="cate-guide">
                 <span>카테고리로 찾아보세요</span>
             </div>
-            <ul class="cate">
-                <li><a href="javascript:void(0)">서양화</a></li>
-                <li><a href="javascript:void(0)">동양화</a></li>
-                <li><a href="javascript:void(0)">미디어아트</a></li>
-                <li><a href="javascript:void(0)">입체미술</a></li>
-            </ul>
+
+            <div class="cate-container">
+                <ul class="cate">
+                    <li class="item">
+                        <a href="javascript:void(0)" style='background-image: url("mone.jpg")'></a>
+                        <span>서양화</span>
+                    </li>
+                    <li class="item">
+                        <a href="javascript:void(0)" style='background-image: url("mone2.jpg")'></a>
+                        <span>동양화</span>
+                    </li>
+                    <li class="item">
+                        <a href="javascript:void(0)" style='background-image: url("mone.jpg")'></a>
+                        <span>미디어아트</span>
+                    </li>
+                    <li class="item">
+                        <a href="javascript:void(0)" style='background-image: url("mone2.jpg")'></a>
+                        <span>입체미술</span>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </article>
 
