--- a/search/artist-profile.html
+++ b/search/artist-profile.html
@@ -45,7 +45,7 @@
   <style>
     @font-face {
       font-family: "Noto Sans KR";
-      src: url("./css/fonts/NotoSans-Light.otf");
+      src: url("./css/fonts/NotoSans-Middle.otf");
     }
 
 
@@ -58,6 +58,10 @@
     }
 
     h1 {
+      margin: 0;
+    }
+
+    h2 {
       margin: 0;
     }
 
@@ -224,23 +228,21 @@
 
   <article>
     <section class="contents">
-
-        <div class="pro-area">
-            <p>작가 프로필</p>
-            <h1>Ninfee rosa</h1>
-            <h2>클라우드 모네</h2>
-            <p>프랑스 | 인상주의 | 빛의 세계 | 밝은 색조 | 인상파의 시작</p>
-            <div class="pro-info">
-                <p>
-                    나는 오늘 아침 대성당에 많은 까마귀가 있는 것을 보았다. 이제 곧 봄이 오고,
-                    종달새가 돌아오겠지. '하느님은 땅의 표면을 새로이 한다.' 라고 씌어있다.
-                    '보라, 나는 모든 사물을 새로이한다.' 그리고 신이 대지의 표면을 새롭게
-                    하듯이, 사람의 영혼과 마음과 가슴에
-                </p>
-            </div>
-          
-        </div>
-
+      <div class="pro-area">
+          <p class="pro-title">작가 프로필</p>
+          <h1>Ninfee rosa</h1>
+          <h2>클라우드 모네</h2>
+          <p class="pro-tag">프랑스 | 인상주의 | 빛의 세계 | 밝은 색조 | 인상파의 시작</p>
+          <div class="pro-info">
+              <p>
+                  나는 오늘 아침 대성당에 많은 까마귀가 있는 것을 보았다. 이제 곧 봄이 오고,
+                  종달새가 돌아오겠지. '하느님은 땅의 표면을 새로이 한다.' 라고 씌어있다.
+                  '보라, 나는 모든 사물을 새로이한다.' 그리고 신이 대지의 표면을 새롭게
+                  하듯이, 사람의 영혼과 마음과 가슴에 말줄임표
+              </p>
+          </div>
+      </div>
+      <div class="gradient-box"></div>
     </section>
   </article>
 
