--- a/search/search-cate.html
+++ b/search/search-cate.html
@@ -233,8 +233,8 @@
                 <span>카테고리로 찾아보세요</span>
             </div>
 
-            <div class="cate-container">
-                <ul class="cate">
+            <div class="item-container">
+                <ul class="item-box">
                     <li class="item">
                         <a href="javascript:void(0)" style='background-image: url("mone.jpg")'></a>
                         <span>서양화</span>
