--- a/search/home.html
+++ b/search/home.html
@@ -9,7 +9,7 @@
     <title>Patron_tv</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.png">
-     <link rel="stylesheet" href="./css/header-active.css">
+     <link rel="stylesheet" href="./css/header-active2.css">
 
     <!-- 설정 js -->
     <script src="./js/config.js"></script>
