210718_작가페이지
artist-profile.html,css

--- a/search/artist-profile.html
+++ b/search/artist-profile.html
@@ -45,7 +45,7 @@
   <style>
     @font-face {
       font-family: "Noto Sans KR";
-      src: url("./css/fonts/NotoSans-Middle.otf");
+      src: url("./css/fonts/NotoSans-Medium.otf");
     }
 
 
@@ -202,16 +202,15 @@
 
     /****서치 뒤로가기 헤더****/
     .menu-back {
-        width: 104px;
-        height: 100vh;
-        position: fixed;
-        left: 0;
-        top: 0;
-        padding: 88px 0 0 24px;
-        box-sizing: border-box;
-        background-color: #1d1d1d;
+      width: 104px;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      padding: 88px 0 0 24px;
+      box-sizing: border-box;
+      background-color: #1d1d1d;
     }
-
   </style>
 
 </head>
@@ -228,24 +227,211 @@
 
   <article>
     <section class="contents">
-      <div class="pro-area">
-          <p class="pro-title">작가 프로필</p>
-          <h1>Ninfee rosa</h1>
-          <h2>클라우드 모네</h2>
-          <p class="pro-tag">프랑스 | 인상주의 | 빛의 세계 | 밝은 색조 | 인상파의 시작</p>
-          <div class="pro-info">
-              <p>
-                  나는 오늘 아침 대성당에 많은 까마귀가 있는 것을 보았다. 이제 곧 봄이 오고,
-                  종달새가 돌아오겠지. '하느님은 땅의 표면을 새로이 한다.' 라고 씌어있다.
-                  '보라, 나는 모든 사물을 새로이한다.' 그리고 신이 대지의 표면을 새롭게
-                  하듯이, 사람의 영혼과 마음과 가슴에 말줄임표
-              </p>
+
+      <section class="explanation">
+        <div class="gradient-box"></div>
+        <div class="main-exhibition" style="">
+          <p class="title1">작가 프로필</p>
+          <p class="title2">클라우드 모네</p>
+          <ul class="tags">
+            <li>
+              <a href="javascript:void(0)">고종황제 서거</a>
+              <span class="bar"></span>
+            </li>
+            <li>
+              <a href="javascript:void(0)">3.1 운동</a>
+              <span class="bar"></span>
+            </li>
+            <li>
+              <a href="javascript:void(0)">100주년</a>
+              <span class="bar"></span>
+            </li>
+            <li>
+              <a href="javascript:void(0)">근대의 유산</a>
+              <span class="bar"></span>
+            </li>
+            <li>
+              <a href="javascript:void(0)">현대 건축의 재해석</a>
+              <span class="bar"></span>
+            </li>
+          </ul>
+          <div class="detail-box">
+            <p class="exhibition-detail">
+              국립현대미술관과 덕수궁 관리소가 공동 추최하는 덕수궁-서울 야외프로젝트 : 기억된 미래는 고종황제의 서거와 3.1운동의 100주년을 맞아, 근대의 태동을 알렸던 대한제국 시기 미래 도시를
+              향한
+              꿈을 현대 건축가들의 시각으로 재해석한 전시이다.국립현대미술관과 덕수궁 관리소가 공동 추최하는 덕수궁-서울 야외프로젝트 : 기억된 미래는 고종황제의 서거와 3.1운동의 100주년을 맞아,
+              근대의
+              태동을 알렸던 대한제국 시기 미래 도시를 향한 꿈을 현대 건축가들의 시각으로 재해석한 전시이다.
+            </p>
           </div>
+          <ul class="buttons">
+            <li class="btn-play">
+              <a href="javascript:void(0)">대표작 감상하기</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <div class="pro-area">
+        <!-- <div class="gradient-box"></div> -->
+        <p class="pro-title">작가 프로필</p>
+        <h1>Ninfee rosa</h1>
+        <h2>클라우드 모네</h2>
+        <p class="pro-tag">프랑스 | 인상주의 | 빛의 세계 | 밝은 색조 | 인상파의 시작</p>
+        <div class="pro-info">
+          <p>
+            나는 오늘 아침 대성당에 많은 까마귀가 있는 것을 보았다. 이제 곧 봄이 오고,
+            종달새가 돌아오겠지. '하느님은 땅의 표면을 새로이 한다.' 라고 씌어있다.
+            '보라, 나는 모든 사물을 새로이한다.' 그리고 신이 대지의 표면을 새롭게
+            하듯이, 사람의 영혼과 마음과 가슴에 나는 오늘 아침 대성당에 많은 까마귀가 있는 것을 보았다. 이제 곧 봄이 오고,
+            종달새가 돌아오겠지.
+          </p>
+        </div>
       </div>
-      <div class="gradient-box"></div>
+
+      <div class="title-area">
+        <p class="pro-title">작가 프로필</p>
+      </div>
+    </section>
+
+    <section class="carousel" id="carousel">
+      <div class="carousel-container" id="carousel_container">
+        <div class="regi-art">
+          <p class="title4">등록된 작품</p>
+          <div class="item-container">
+            <ul class="item-box">
+              <li class="item" style=' background-image: url("img/home/ham.jpg")'><a href="javascript:void(0)"></a></li>
+              <li class="item" style=' background-image: url("img/home/ham.jpg")'><a href="javascript:void(0)"></a></li>
+              <li class="item" style=' background-image: url("img/home/ham.jpg")'><a href="javascript:void(0)"></a></li>
+              <li class="item" style=' background-image: url("img/home/ham.jpg")'><a href="javascript:void(0)"></a></li>
+              <li class="item" style=' background-image: url("img/home/ham.jpg")'><a href="javascript:void(0)"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="must-exhibition" style="opacity: 1;">
+          <p class="title4">클라우드 모네와 관련된 전시</p>
+          <div class="item-container" style="left: 0px;">
+            <ul class="item-box">
+              <li class="item" style=" background-image: url(&quot;img/home/ham.jpg&quot;)"><a href="javascript:void(0)"
+                  class=""></a></li>
+              <li class="item" style=" background-image: url(&quot;img/home/ham.jpg&quot;)"><a href="javascript:void(0)"
+                  class=""></a></li>
+              <li class="item" style=" background-image: url(&quot;img/home/ham.jpg&quot;)"><a href="javascript:void(0)"
+                  class=""></a></li>
+              <li class="item" style=" background-image: url(&quot;img/home/ham.jpg&quot;)"><a href="javascript:void(0)"
+                  class=""></a></li>
+              <li class="item" style=" background-image: url(&quot;img/home/ham.jpg&quot;)"><a href="javascript:void(0)"
+                  class=""></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
   </article>
+  <script>
 
+    //item이 왼쪽으로 이동하는 함수 moveItem
+    //item : 테두리가 생길 태그 container : 그 태그를 둘러싸고있는 position이 잡힌 박스 
+    //length: 박스의 가로 넓이 + 마진값
+    function moveItem(item, container, length) {
+      $(item).on({
+        focus: function () {
+          $('body').css('top', 0);
+          var num = $(this).parent().index();
+          var left = num * -length
+          $(this).addClass('active');
+          $(container).css('left', left);
+          if (num == 0) {
+            $(container).css('left', 0);
+          }
+          if (num == 1) {
+            $(container).css('left', -length);
+          }
+        },
+        blur: function () {
+          $(this).removeClass('active');
+        }
+      })
+    }
+    moveItem('.regi-art .item a', '.regi-art .item-container', 420);
+    moveItem('.new-artworks .item a', '.new-artworks .item-container', 420);
+    moveItem('.theme2 .item a', '.theme2 .item-container', 420);
+    moveItem('.must-exhibition .item a', '.must-exhibition .item-container', 420);
+    moveItem('.theme3 .item a', '.theme3 .item-container', 420);
+    moveItem('.artist-list .item a', '.artist-list .item-container', 236);
+
+    //버튼 변화 함수
+    function changeActive(button) {
+      $(button).on({
+        focus: function () {
+          $(this).addClass('active');
+        },
+        blur: function () {
+          $(this).removeClass('active');
+        }
+      })
+
+    }
+
+    changeActive('.btn-play a');
+    changeActive('.btn-info a');
+
+    //스크롤 방지 함수 
+    function avoidScrollTop() {
+      document.getElementById('carousel').scrollTop = 0;
+    }
+
+    //등록된 작품이 포커스 됐을 때 main-exhibition 이 사라지고 새롭게 선보이는 작품이 보인다. 
+    //carousel의 top이 612px로 이동하고 높이는 480px로 변한다. 그리고 바로 아래의 div는 opacity 0.4가 된다.
+    var carouselTop = 0;
+    var smallBoxHeight = 360
+    var bigBoxHeight = 825;
+
+    $('.regi-art a').on({ //등록된 작품 <a> 포커스시,
+      focus: function (e) {
+        avoidScrollTop();
+        $('.main-exhibition').css('opacity', '0 ');
+        $('.must-exhibition').css('opacity', 0.4);
+        $('.carousel').css('top', 612).css('height', 480);
+
+        $(".pro-area").css('opacity', '100');
+
+      },
+      blur: function () {
+        //opacity가 돌아온다
+        $('.new-artworks').css('opacity', 1);
+        $('.pro-area').css('opacity', 1);
+      }
+    });
+
+    //작가와 관련된 전시가 포커스 됐을 때 carousel-conatiner의 top이 360px 올라간다. 
+    $('.must-exhibition a').on({
+      focus: function () {
+        avoidScrollTop();
+        $('.pro-area').css('opacity', '0');
+        $('.title-area').css('opacity', 1);
+        $('.must-exhibition').css('opacity', 1);
+        carouselTop = -1 * smallBoxHeight;
+        $('.carousel').css('top', 134).css('height', 992);
+        $('.carousel-container').css('top', carouselTop);
+
+        //2초 후 이미지 사이즈 변경
+        $(this).addClass('on');
+        console.log(this);
+      },
+      blur: function () {
+        // avoidScrollTop();
+        // $('.main-exhibition').css('opacity', '0');
+        // $('.must-exhibition').css('opacity', 0.4);
+        // $('.carousel').css('top', 612).css('height', 480);
+
+        // $(".pro-area").css('opacity', '100');
+      }
+
+    });
+
+
+  </script>
 
 </body>
 
